@@ -1,3 +1,8 @@
+2015-05-17  Adhemerval Zanella  <adhemerval.zanella@linaro.org>
+
+	[BZ #18418]
+	* stdlib/tst-setcontext3.sh: Remove non-portable array use.
+
 2015-05-15  Joseph Myers  <joseph@codesourcery.com>
 
 	[BZ #16352]
